--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -102,7 +102,7 @@
 						<div class="row col-md-4">
 							<div class="feature-left">
 								<span class="icon">
-									<img src="{{ url_for('static', filename='images/Yoshi.png') }}" alt="">
+									<img src="{{ url_for('static', filename='images/Yoshi.jpg') }}" alt="">
 								</span>
 								<div class="row col-md-4 feature-copy">
 									<h3>Yoshi Suzuki</h3>
