--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -116,7 +116,7 @@
 						<div class="col-md-4 row">
 							<div class="feature-left">
 								<span class="icon">
-									<img src="{{ url_for('static', filename='images/Aakash.png') }}" alt="">
+									<img src="{{ url_for('static', filename='images/Aakash.jpg') }}" alt="">
 								</span>
 								<div class="row col-md-4 feature-copy">
 									<h3>Aakash Sharan</h3>
