--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -105,7 +105,7 @@
 									<img src="{{ url_for('static', filename='images/Yoshi.jpg') }}" alt="">
 								</span>
 								<div class="row col-md-4 feature-copy">
-									<h3>Yoshi Suzuki</h3>
+									<h3>Yoshifumi Suzuki</h3>
 									<!-- <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
 									<p><a href="#">Learn More <i class="icon-arrow-right22"></i></a></p> -->
 								</div>
